# review_server_mcp_server_v2

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
codex_review/: README.md  review_20260410_043631.md  review_20260410_050119.md  review_20260410_050853.md  review_20260410_051759.md
data/: review.db
scripts/: inspect_mcp.py
src/: config.py  demo_data.py  feishu.py  feishu_bot.py  models.py  server.py  service.py
src/engine/: __init__.py  dimensions.py  scoring.py
src/repository/: __init__.py  base.py  schema.sql  sqlite.py
tests/: conftest.py  test_engine.py  test_repository.py  test_service.py
